--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.12.0
+  flutter_riverpod: ^2.6.1
+  go_router: ^17.0.0
+  intl: ^0.20.2
+  google_fonts: ^6.3.2
+  flutter_svg: ^2.2.3
+  uuid: ^4.5.2
+  font_awesome_flutter: ^10.9.1
 
 dev_dependencies:
   flutter_test:
