--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,15 @@ dependencies:
   flutter_svg: ^2.2.3
   uuid: ^4.5.2
   font_awesome_flutter: ^10.9.1
+  google_sign_in: ^6.2.1
+  # sign_in_with_apple: ^6.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  riverpod_generator: ^2.4.0
+  build_runner: ^2.4.8
+  riverpod_annotation: ^2.3.5
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
