--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   go_router: ^17.0.0
   intl: ^0.20.2
+  shared_preferences: ^2.2.2
   google_fonts: ^6.3.2
   flutter_svg: ^2.2.3
   uuid: ^4.5.2
