--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_svg: ^2.2.3
   uuid: ^4.5.2
   font_awesome_flutter: ^10.9.1
+  fl_chart: ^0.66.0
   google_sign_in: ^6.2.1
   # sign_in_with_apple: ^6.1.0
 
