--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   font_awesome_flutter: ^10.9.1
   fl_chart: ^0.66.0
   google_sign_in: ^6.2.1
+  supabase: ^2.10.2
   # sign_in_with_apple: ^6.1.0
 
 dev_dependencies:
