--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   fl_chart: ^0.66.0
   google_sign_in: ^6.2.1
   supabase: ^2.10.2
+  image_picker: ^1.2.1
   # sign_in_with_apple: ^6.1.0
 
 dev_dependencies:
