fix(security): remove exposed Supabase service role keys
BREAKING: Deleted diagnostic scripts containing hardcoded secrets
- Removed bin/diagnose_db.dart
- Removed bin/check_rls.dart
- Removed bin/check_migration.dart

Added security measures:
- Updated .gitignore to prevent env files and bin scripts
- Added .env.example as template for environment variables

Fixes GitGuardian alert for Supabase Service Role JWT exposure

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,15 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Environment files - NEVER commit these!
+.env
+.env.local
+.env.development
+.env.production
+*.env
+
+# Debug/diagnostic scripts with secrets (should be deleted)
+bin/diagnose_db.dart
+bin/check_rls.dart
+bin/check_migration.dart
